--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,7 @@
 - @posts.each do |post|
 	%h2= link_to post.title, post
-	%p= post.content
+	%p
+		Published at
+		= time_ago_in_words(post.created_at)
 
 = link_to "New Post", new_post_path
