--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 %head
-	%title Forum
+	%title Beck's Rails Forum
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
 	%link{ rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Lato:300,400,700", type: "text/css"}
 	%link{:rel => "stylesheet", :href => "http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"}/
@@ -9,6 +9,16 @@
 	= csrf_meta_tags
 
 %body
-	%p.notice= notice
-	%p.alert= alert
-	= yield
+	%header.main_header.clearfix
+		.wrapper
+			#logo
+				%p Beck's Rails Forum
+			#buttons
+				= link_to "New Post", new_post_path
+
+	.wrapper
+		%p.notice= notice
+		%p.alert= alert
+
+	.wrapper
+		= yield
