--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@ body {
 	background: white;
 	#logo {
 		float: left;
-		p {
+		a {
 			text-transform: uppercase;
 			font-weight: 700;
 			letter-spacing: -1px;
