--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -125,18 +125,18 @@ body {
 					text-decoration: none;
 					margin-right: 2%;
 				}
-			}
+			} // buttons
 			.comment_content {
 				margin: 0;
 				padding: 0;
-			}
+			} // comment_content
 			.comment_author {
 				color: #397CAC;
 				margin-top: .5rem;
 				font-size: 0.6em;
 				font-weight: 700;
-			}
-		}
+			} // comment_author
+		} // comment
 		input[type="submit"] {
 			background: #397CAC;
 			border: none;
@@ -152,5 +152,5 @@ body {
 			border-radius: .2em;
 			margin: 1em 0;
 		}
-	}
-}
+	} // comments
+} // post content
